crates/biome_js_parser/tests/js_test_suite/error/jsx_in_js.mjs
function name() {
	return <div></div>
}
